unpackaged/main/default/objects/Tax_Code__c/Tax_Code__c.object-meta.xml
<CustomObject>
    <description>This is custom object to store all tax codes and rates.</description>
    <label>Tax Code</label>
    <nameField>
        <label>Tax Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Codes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>