unpackaged/main/default/objects/Tax_Code__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field to indicate whether Tax Code is Active or Inactive in SF</description>
    <inlineHelpText>Field to indicate whether Tax Code is Active or Inactive in SF</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>