unpackaged/main/default/objects/Tax_Code__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Denotes the country of tax code belongs to</description>
    <inlineHelpText>Denotes the country of tax code belongs to</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>