unpackaged/main/default/objects/Tax_Code__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Denotes description for the tax code</description>
    <inlineHelpText>Denotes description for the tax code</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>