unpackaged/main/default/objects/Tax_Code__c/fields/NS_Tax_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Tax_Internal_ID__c</fullName>
    <description>Denotes the unique external id that is integrated with netsuite system</description>
    <inlineHelpText>Denotes the unique external id that is integrated with netsuite system</inlineHelpText>
    <label>NS Tax Internal ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>