unpackaged/main/default/objects/Tax_Code__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>Denotes the SF record id of tax code</description>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Denotes the SF record id of tax code</inlineHelpText>
    <label>Record ID</label>
    <type>Text</type>
</CustomField>