unpackaged/main/default/objects/Tax_Code__c/fields/Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate__c</fullName>
    <description>Denotes the tax rate</description>
    <inlineHelpText>Denotes the tax rate</inlineHelpText>
    <label>Tax Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>