unpackaged/main/default/objects/Tax_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Tax_Rate__c</columns>
    <columns>Record_ID__c</columns>
    <columns>Country__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Description__c</columns>
    <columns>NS_Tax_Internal_ID__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>